--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,8 @@
 /* app.css  */
 
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* Tommy Hilfiger theme styles */
 .theme-th {
