--- a/src/app.css
+++ b/src/app.css
@@ -19,10 +19,10 @@
   }
   /* Styles for product cards in CK theme */
   .card {
-    @apply bg-white border border-gray-300 rounded-lg overflow-hidden;
+    @apply  border-gray-200 border rounded-xl ;
   }
   .card:hover {
-    @apply shadow-lg;
+    @apply border-tommy-background-deep-blue border shadow-lg;
   }
 
   /* Styles for navigation in TH theme */
