--- a/src/app.css
+++ b/src/app.css
@@ -1,111 +1,8 @@
 /* app.css  */
+@import "tailwindcss/base";
+@import "../styles/themes/theme-th.css";
+@import "../styles/themes/theme-ck.css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/components";
 
-/* Tommy Hilfiger theme styles */
-.theme-th {
-  /* Base styles for the th-theme */
-  @apply bg-tommy-background-lightest text-tommy-dark-blue;
-  .btn {
-    @apply text-tommy-white bg-tommy-red border border-transparent font-bold py-2 px-4 rounded;
-  }
-  .btn:hover {
-    @apply bg-tommy-orange; /* Assuming you want a darker red on hover */
-  }
-  .btn:focus {
-    @apply ring-tommy-dark-blue ring-opacity-50 outline-none;
-  }
-  /* Styles for product cards in CK theme */
-  .card {
-    @apply  border-gray-200 border rounded-xl ;
-  }
-  .card:hover {
-    @apply border-tommy-background-deep-blue border shadow-lg;
-  }
-
-  /* Styles for navigation in TH theme */
-  .nav {
-    @apply bg-tommy-background-navy text-tommy-white;
-  }
-  .nav a {
-    @apply text-tommy-white hover:text-tommy-light-gray;
-  }
-  /* Styles for headings in TH theme */
-  .heading {
-    @apply text-2xl font-bold text-tommy-dark-blue;
-  }
-  /* Styles for prices in TH theme */
-  .price {
-    @apply text-lg font-semibold text-tommy-red;
-  }
-  /* Other utility styles in TH theme */
-  .placeholder {
-    @apply placeholder-tommy-background-medium-gray;
-  }
-
-  /* Styles for the 'VIEW DETAILED REPORT' button in TH theme */
-  .btn-detailed-report {
-    @apply text-tommy-white bg-tommy-background-medium-gray border border-transparent font-bold py-2 px-4 rounded transition-colors duration-300 ease-in-out;
-  }
-
-  .btn-detailed-report:hover {
-    @apply bg-tommy-black; /* Change according to the hover color you want */
-  }
-}
-
-/* Calvin Klein theme styles */
-.theme-ck {
-  /* Base styles for the ck-theme */
-  @apply bg-white text-gray-800;
-
-  /* Styles for buttons in CK theme */
-  .btn {
-    @apply text-white bg-black border border-transparent font-bold py-2 px-4 rounded;
-  }
-  .btn:hover {
-    @apply bg-gray-800; /* A slightly lighter black on hover */
-  }
-  .btn:focus {
-    @apply ring-gray-800 ring-opacity-50 outline-none;
-  }
-
-  /* Styles for product cards in CK theme */
-  .card {
-    @apply bg-white border border-gray-300 rounded-lg overflow-hidden;
-  }
-  .card:hover {
-    @apply shadow-lg;
-  }
-
-  /* Styles for navigation in CK theme */
-  .nav {
-    @apply bg-gray-900 text-white;
-  }
-  .nav a {
-    @apply text-white hover:text-gray-300;
-  }
-
-  /* Styles for headings in CK theme */
-  .heading {
-    @apply text-3xl font-bold text-gray-900;
-  }
-
-  /* Styles for text in CK theme */
-  .text {
-    @apply font-sans text-base font-normal leading-normal;
-  }
-
-  /* Styles for prices in CK theme */
-  .price {
-    @apply text-lg font-semibold text-black;
-  }
-
-  /* Other utility styles in CK theme */
-  .placeholder {
-    @apply placeholder-gray-500;
-  }
-
-  /* ... additional nested hover and focus states for CK theme elements ... */
-}
+@import "tailwindcss/utilities";
